<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.ProfileFragment">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/title_profile"
                    android:textSize="34sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <androidx.cardview.widget.CardView
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                app:cardCornerRadius="100dp">

                <ImageView
                    android:id="@+id/imgProfilePic"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:contentDescription="@string/developer"
                    android:src="@drawable/baseline_account"
                    android:scaleType="centerCrop"/>
            </androidx.cardview.widget.CardView>

            <ProgressBar
                android:id="@+id/progressBar2"
                style="?android:attr/progressBarStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30sp"
                android:layout_marginBottom="20sp"
                android:visibility="invisible" />

            <EditText
                android:id="@+id/edUserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text"
                android:hint="@string/edUserNameHint"
                android:paddingTop="20sp"
                android:paddingStart="20sp"
                android:paddingEnd="20sp"
                android:textSize="24sp"/>

            <EditText
                android:id="@+id/edUserNum"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:editable="false"
                android:ems="10"
                android:enabled="false"
                android:hint="@string/edUserNumHint"
                android:inputType="text"
                android:paddingStart="20sp"
                android:paddingTop="30sp"
                android:paddingEnd="20sp"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btnUpdate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btnUpdate"
                android:textSize="24sp"
                android:padding="10sp"
                android:layout_marginTop="50sp"
                android:layout_marginStart="10sp"
                android:layout_marginEnd="10sp"/>

            <Button
                android:id="@+id/btnLogOut"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="18sp"
                android:text="Log Out"
                android:layout_marginStart="10sp"
                android:layout_marginEnd="10sp"
                android:layout_marginBottom="50sp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnMyFriends"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5sp"
                    android:layout_weight="1"
                    android:text="@string/btnFriends" />

                <Button
                    android:id="@+id/btnRequest"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5sp"
                    android:layout_weight="1"
                    android:text="@string/btnRequest" />
            </LinearLayout>

            <TextView
                android:id="@+id/txtUsersHead"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:padding="10sp"
                android:visibility="invisible"
                android:text="TextView" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewRequests"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="50sp"/>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>